# extension-livekit-mcp

./: .env.example  .gitignore  README.md  SETUP.md
agent/: agent.py  agent_selfhosted.py  pyproject.toml  requirements.txt  token_server.py
blog/: draft.md
deploy/: livekit-agent.service  livekit-voice-agent.service
examples/: WALKTHROUGH.md
extension/: background.js  manifest.json  sidepanel.html  sidepanel.js
proxy/: worker.js  wrangler.toml
