[project]
name = "voice-browser-agent"
version = "0.1.0"
description = "Voice AI agent that controls a browser via Webfuse MCP"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[openai,silero,mcp]>=1.4.0",
    "livekit-plugins-elevenlabs>=1.0.0",
    "livekit-api>=1.0.0",
    "python-dotenv",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]
